crates/vue_oxc_toolkit/fixtures/error/irrecoverable-script.vue
<template>
  <div></div>
</template>

<script lang="ts" setup>
let const p { const w p =)
</script>

<style></style>
